--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,8 @@
   <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <img src="img/logo/menu.svg" alt="hamburger">
   </button>
-  <a href="#"><img src="img/logo/index.svg" alt="" class="logo"></a>
-  <a href="#"><img src="img/logo/panier.svg" alt=""class="panier"><span class="badge badge-pill badge-danger">0</span></a>
+  <a href="#"><img src="img/logo/index.svg" alt="logo" class="logo"></a>
+  <a href="#"><img src="img/logo/panier.svg" alt="panier" class="panier"><span class="badge badge-pill badge-danger">0</span></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="d-flex flex-row" id="navphonefirst">
@@ -140,7 +140,7 @@
           <p><i class="fa fa-home" aria-hidden="true"></i>38, Rue michelet, <br>42 000 Saint etienne</p>
           <p><i class="fa fa-phone-square" aria-hidden="true"></i>04.27.78.54.86</p>
           <p><i class="fa fa-at" aria-hidden="true"></i>lebigboss@archiduchesse.com</p>
-          <iframe id="carte" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5599.439343178097!2d4.393232!3d45.435152!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f5aeadc75deb2f%3A0xca1da2132758d2c5!2s38+Rue+Michelet%2C+42000+Saint-%C3%89tienne%2C+France!5e0!3m2!1sen!2sfr!4v1494842367482" width="400" height="300" frameborder="0" style="border:0" allowfullscreen class="col-12"></iframe>
+          <iframe id="carte" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5599.439343178097!2d4.393232!3d45.435152!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f5aeadc75deb2f%3A0xca1da2132758d2c5!2s38+Rue+Michelet%2C+42000+Saint-%C3%89tienne%2C+France!5e0!3m2!1sen!2sfr!4v1494842367482" width="400" height="300" style="border:0" allowfullscreen class="col-12"></iframe>
 
 
         </section>
